k8s/moonlay-ctp-chart/templates/service.yaml
---
# Source: moonlay-ctp-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: RELEASE-NAME-moonlay-ctp-chart
  labels:
    helm.sh/chart: moonlay-ctp-chart-0.1.0
    app.kubernetes.io/name: moonlay-ctp-chart
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: moonlay-ctp-chart
    app.kubernetes.io/instance: RELEASE-NAME
